--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": "",
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment production --output-path=docs",
     "lint": "eslint ./*.js app blueprints config lib server tests",
     "start": "ember serve",
     "test": "ember test"
