--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-jsoneditor": "^0.1.4",
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-sass": "^7.1.7",
     "ember-cli-shims": "^1.2.0",
@@ -41,6 +42,7 @@
     "ember-source": "~3.1.0",
     "ember-truth-helpers": "^2.0.0",
     "eslint-plugin-ember": "^5.0.0",
+    "jsoneditor": "^5.16.0",
     "loader.js": "^4.2.3",
     "materialize-css": "^1.0.0-rc.1"
   },
